name:                atproto-hs
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/Cj-bc/atproto-hs#readme
license:             BSD-3
license-file:        LICENSE
author:              Cj.bc_sd a.k.a Cj-bc
maintainer:          cj.bc-sd@outlook.jp
copyright:           Cj.bc_sd a.k.a Cj-bc
category:            Web
build-type:          Simple
extra-source-files:  README.org
                     CHANGELOG.org
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/Cj-bc/atproto-hs#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Web.ATProto.Lexicons.Com.Atproto.RepoDescribe
                     , Web.ATProto.Lexicons.TH
                     , Web.ATProto.Lexicons.Core
  build-depends:       base >= 4.7 && < 5
                     , text
                     , template-haskell
                     , aeson
                     , extra
                     , attoparsec
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable atproto-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , atproto-hs
                     , http-client
                     , http-types
                     , http-conduit
                     , text
                     , aeson
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite atproto-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , atproto-hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/Cj-bc/atproto-hs
